# tg-blog-updater

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  renovate.json
.github/workflows/: release.yml
extras/: gh-actions.yml  video.rb  youtube.rb
tg_blog_updater/: __init__.py  __main__.py  github_client.py  handlers.py  main.py  post_builder.py  tg_utils.py  utils.py
